<resources>
    <string name="app_name">Annisa Resto</string>
    <string name="restaurant_name">Annisa\'s Restaurant</string>
    <string name="pilih_menu">Pilih Menu</string>
    <string name="dine_in">Dine In</string>
    <string name="take_away">Take Away</string>
    <string name="button_pesan">button_pesan</string>
    <string name="button_pesanan">Pilih Pesanan</string>
    <string name="nama">Nama</string>
    <string name="telepon">Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="identitas">Identitas Pemesan</string>
    <string name="catatan">Catatan</string>
    <string name="pilih_pesanan">Pilih Pesanan</string>
    <string name="no_meja">No. Meja:</string>
    <string name="detail_customer">Detail Customer:</string>
    <string name="nama_customer">Nama</string>
    <string name="harga_sphagetti">Rp. 50000</string>
    <string name="komposisi">Komposisi :</string>
    <string name="detail_komposisi">Pasta, Sauce, Garnish</string>
    <string name="sphagetti_carbonara">Sphagetti Carbonara</string>
    <string name="pesan">Pesan</string>
    <string name="sphagetti">Sphagetti</string>
    <string name="steak">Steak</string>
    <string name="juice">juice</string>
    <string name="cake">Ice Crem Cake</string>
    <string name="coffe">coffe</string>
</resources>
