<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="id.web.annisa.annisarifqimuafah_1202150270_modul2.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilih_menu"
        android:id="@+id/textintro"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="197dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="522dp"
        android:padding="80sp"
        android:id="@+id/splash"
        android:src="@drawable/restaurant"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="170dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignTop="@+id/textintro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">
        <RadioButton
            android:id="@+id/rbt_DineIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dine_in"/>
        <RadioButton
            android:id="@+id/rbt_TakeAway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_away"/>
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pesan"
        android:id="@+id/button_pesan"
        android:onClick="showPesan"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="54dp" />

</RelativeLayout>
