<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="id.web.annisa.annisarifqimuafah_1202150270_modul2.DetailMenu">

    <TextView
        android:id="@+id/detailHarga1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="17dp"
        android:text="@string/harga_sphagetti" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/komposisi"
        android:layout_below="@+id/detailHarga1" />

    <ImageView
        android:id="@+id/detailPict1"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:src="@drawable/spaghetti"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/detailHarga1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_komposisi"
        android:layout_alignTop="@+id/detailPict1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp" />

    <TextView
        android:id="@+id/detailMenu1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/sphagetti_carbonara"
        android:layout_above="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        tools:ignore="UnknownId" />

</RelativeLayout>
